--- a/css_src/_hkcosm_1.scss
+++ b/css_src/_hkcosm_1.scss
@@ -518,6 +518,9 @@
 
                 .footer-contactUs-link-arrow{
                     background:#8da6d4;
+                    &:before,&:after{
+                        background:#8da6d4;
+                    }
                 }
             }
 
