--- a/css_src/style.scss
+++ b/css_src/style.scss
@@ -7,3 +7,11 @@
 @import "hkcosm_1";
 
 @import "hkcosm_2_1";
+
+@import "hkcosm_3_1";
+
+@import "hkcosm_4_1";
+
+@import "hkcosm_5_1";
+
+@import "hkcosm_6_1";
