--- a/css_src/_hkcosm_1.scss
+++ b/css_src/_hkcosm_1.scss
@@ -122,24 +122,173 @@
 
 .mainVisual{
     height:820px;
+    position:relative;
+
+    .slider{
+        height:100%;
+        border:0;
+
+        &-item{
+            width:100%;
+            height:820px;
+            text-indent:-9999px;
+
+            &:nth-child(1){
+                background:url("../images/mainvisual_1.jpg")no-repeat;
+                background-size:cover;
+            }
+
+            &:nth-child(2){
+                background:url("../images/mainvisual_2.jpg")no-repeat;
+                background-size:cover;
+            }
+        }
+    }
+
+    &-text{
+        position:absolute;
+        top:50%;
+        left:0;
+        width:100%;
+        margin-top:-81px;
+        text-align:center;
+
+        &-heading{
+            font-size:58px;
+            color:#fff;
+            font-weight:600;
+            letter-spacing:-1px;
+        }
+
+        &-con{
+            font-size:24px;
+            color:#fff;
+            letter-spacing:-1px;
+            font-weight:300;
+            margin-top:25px;
+        }
+
+    }
+
+    .bx-wrapper{
+        box-shadow:none;
+        background:0;
+        border:0;
+    }
+    .bx-wrapper .bx-pager{
+        position:absolute;
+        top:50%;
+        right:37px;
+        width:auto;
+        margin-top:-51.5px;
+    }
+    .bx-wrapper .bx-pager-item{
+        display:block;
+        margin-top:27px;
+        position: relative;
+
+        &:last-child{
+
+            &:before{
+                content:"";
+                position:absolute;
+                top:-30px;
+                left:7px;
+                width:1px;
+                height:30px;
+                background:#d8d8d8;
+            }
+
+        }
+
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a{
+        background:#d8d8d8;
+        width:5px;
+        height:5px;
+        border-radius:0;
+        position:relative;
+        z-index:2;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a:hover:after,
+    .bx-wrapper .bx-pager.bx-default-pager a.active:after{
+        display:block;
+        content:"";
+        position: absolute;
+        top:0;
+        left:0;
+        width:5px;
+        height:5px;
+        background:#000;
+        z-index:6;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a:hover:before,
+    .bx-wrapper .bx-pager.bx-default-pager a.active:before{
+        display:block;
+        content:"";
+        width:9px;
+        height:9px;
+        border:1px solid #000;
+        background:#fff;
+        position:absolute;
+        top:-3px;
+        left:-3px;
+    }
+    .bx-wrapper .bx-pager.bx-default-pager a.active{
+
+        &:after{
+            display:block;
+            content:"";
+            width:5px;
+            height:5px;
+            background:#000;
+            position:absolute;
+            top:0;
+            left:0;
+        }
+    }
+
 }
 
 .total{
+    width:100%;
+    height:515px;
     padding:120px 0;
     text-align: center;
+    box-sizing: border-box;
+    display:table;
+
+    .container{
+        display: table-cell;
+        vertical-align:middle;
+        width:100%;
+    }
 
     &-title{
-        font-size:1.875rem;
-        color: #2b2b2b;
+        font-size:30px;
+        color:#2b2b2b;
         font-weight:500;
-        margin-bottom:31px;
+        letter-spacing:-1px;
     }
+
     &-text{
-        color: #747474;
-        font-size: 16px;
+        font-size:16px;
+        color:#747474;
         font-weight:300;
-        line-height: 1.625;
+        font-family:"Noto Sans KR", sans-serif;
+        line-height:1.6;
+        letter-spacing:-1px;
+        margin-top:15px;
     }
+
+    .moreBtn{
+        margin-top:15px;
+
+        &-link{
+            color:#2B2B28;
+        }
+    }
+
 }
 
 .production{
@@ -213,6 +362,7 @@
                     left:30px;
                     bottom:40px;
                     color:#fff;
+                    letter-spacing:-1px;
 
                     &-title{
                         margin-bottom: 10px;
@@ -238,6 +388,8 @@
     background-size:cover;
 
     &-list{
+        padding-left:20px;
+        padding-right:20px;
 
         &:after{
             display:block;
@@ -246,7 +398,7 @@
         }
 
         &-item{
-            width:33%;
+            width:33.3333%;
             height:802px;
             border-right:rgba(255, 255, 255, 0.2) 1px solid;
             float:left;
@@ -264,16 +416,17 @@
                 text-align: center;
 
                 &-number{
-                    font-size: 100px;
-                    font-weight: 500;
-                    margin-bottom: 50px
+                    font-size:100px;
+                    font-weight:500;
+                    margin-bottom:40px;
+                    letter-spacing:-1px;
                 }
 
                 &-text{
+                    font-size:24px;
                     font-weight:300;
-                    font-size: 24px;
-                    letter-spacing: -0.5px;
-                    margin-bottom:50px;
+                    letter-spacing:-0.5px;
+                    margin-bottom:30px;
                 }
             }
         }
@@ -282,14 +435,16 @@
 }
 
 .webzine{
+    height:724px;
     padding:120px 0;
+    box-sizing:border-box;
     
     &-title{
-        color: #2b2b2b;
-        font-weight: 500;
-        font-size: 30px;
+        color:#2b2b2b;
+        font-weight:500;
+        font-size:30px;
         text-align:center;
-        margin-bottom:48px;
+        margin-bottom:49px;
     }
 
     &-list{
@@ -301,7 +456,7 @@
         }
 
         &-item{
-            width:33%;
+            width:33.3333%;
             float:left;
             padding-left:20px;
             padding-right:20px;
