--- a/html_src/_include/_footer.html
+++ b/html_src/_include/_footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-    <div class="inner-box">
+    <div class="container">
         <h2 class="footer-logo"><img src="../images/footer_logo.png" alt="footer_logo"></h2>
         <ul class="footer-contact">
             <li class="footer-contact-list">Tel. +82-2-724-3712</li>
