--- a/css_src/_hkcosm_1.scss
+++ b/css_src/_hkcosm_1.scss
@@ -3,15 +3,12 @@
     height:173px;
     background:#fff;
 
-    &-inner{
-        width:916px;
-        margin:0 auto;
-    }
-
     &-top{
-        text-align:center;
+        width:920px;
+        margin:0 auto;
         padding-top:40px;
         position: relative;
+        text-align:center;
 
         .logo{
             display: inline-block;
@@ -64,20 +61,12 @@
         .gnb{
 
             &-depth1{
-
-                &:after{
-                    display:block;
-                    content:"";
-                    clear:both;
-                }
+                text-align: center;
+                font-size:0;
 
                 &-item{
-                    float:left;
-                    margin-right:84px;
-
-                    &:last-child{
-                        margin-right:0;
-                    }
+                    display:inline-block;
+                    margin:0 42px;
                 }
 
                 &-link{
@@ -158,6 +147,10 @@
             color:#fff;
             font-weight:600;
             letter-spacing:-1px;
+        }
+
+        .br{
+            display:none;
         }
 
         &-con{
@@ -703,6 +696,128 @@
 
 
         }
+    }
+
+}
+
+@media screen and (max-width:991px){
+
+    .header-bottom .gnb-depth1-item{
+        margin:0 22px;
+    }
+
+    .header-bottom .gnb-depth1-link{
+        font-size:13px;
+        letter-spacing:-1px;
+    }
+
+    .mainVisual-text .br{
+        display:block;
+    }
+
+    .bgMore{
+        height:100%;
+        padding:120px 0;
+
+        &-list{
+
+            &-item{
+                width:100%;
+                height:auto;
+                border-right:0;
+
+                &:nth-child(2){
+                    margin-top:80px;
+                }
+                &:nth-child(3){
+                    margin-top:80px;
+                }
+            }
+        }
+    }
+
+    .webzine-list-img{
+        height:230px;
+    }
+
+    .footer{
+        padding:70px 30px;
+        height:auto;
+
+        &-site{
+
+            &-map{
+                float:none;
+                margin-top:30px;
+            }
+
+            &-family{
+                float:none;
+                margin-top:30px;
+                width:402px;
+                background:url("../images/select_arrow.png") no-repeat 95% center;
+            }
+
+            &-contactUs{
+                float:none;
+                margin-top:70px;
+                width:380px;
+            }
+        }
+    }
+
+    .footer-contact-list{
+        float:none;
+        margin-top:15px;
+
+        &:nth-child(2){
+            margin-top:15px;
+        }
+        &:nth-child(3){
+            margin-top:15px;
+        }
+    }
+
+}
+
+@media screen and (max-width:1200px){
+
+    .header-top .lang-list-item{
+        margin-left:8px;
+    }
+
+    .header-top .lang-list-link{
+        font-size:12px;
+    }
+}
+
+@media screen and (min-width:768px){
+
+    .container{
+        width:750px;
+    }
+
+    .production-list-item{
+        width:100%;
+        margin-bottom:20px;
+
+        &:last-child{
+            margin-bottom:0;
+        }
+    }
+}
+
+@media screen and (min-width:992px){
+
+    .container{
+        width:970px;
+    }
+}
+
+@media screen and (min-width:1200px){
+
+    .container{
+        width:1200px;
     }
 
 }
