19/03/22 반응형 수정

--- a/html_src/_include/_footer.html
+++ b/html_src/_include/_footer.html
@@ -8,7 +8,7 @@
         </ul>
         <div class="footer-text">
             <a href="#" class="footer-text-privacy">개인정보취급방침</a>
-            <div class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</div>
+            <span class="footer-text-copy">&#64;2017 HANKOOK COSMETICS MANUFACTURING CO.,LTD All Right Reserved</span>
         </div>
         <div class="footer-site">
             <div class="footer-site-map">
