--- a/css_src/_commons.scss
+++ b/css_src/_commons.scss
@@ -1,8 +1,3 @@
-.inner-box{
-    width:1130px;
-    margin:0 auto;
-}
-
 .container{
     width:1170px;
     margin:0 auto;
@@ -96,4 +91,8 @@
             right:0;
         }
     }
+}
+
+.mt30{
+    margin-top:30px;
 }
