--- a/css_src/_hkcosm_1.scss
+++ b/css_src/_hkcosm_1.scss
@@ -977,73 +977,69 @@
 
         &-bottom{
             display:none;
+
+            &.on{
+                display:block;
+            }
         }
 
-        .header-bottom.active{
-            display:none;
 
-            .gnb{
-                width:100%;
-                background:#fff;
-                position: absolute;
-                top:71px;
-                z-index:10;
+        .gnb{
+            width:100%;
+            background:#fff;
+            position: absolute;
+            top:71px;
+            z-index:10;
 
-                &-depth1{
+            &-depth1{
+
+                &-item{
+                    display:block;
+                    margin:0;
+                    border-bottom:1px solid #e1e1e1;
+                    background:#fff;
+                    padding:18px 0;
+                }
+                &-link{
+                    height:auto;
+                    line-height:inherit;
+                }
+            }
+            &-depth2{
+                display:none;
+            }
+            .lang{
+                display:block;
+                height:50px;
+                background:#f5f5f5;
+                border-bottom:1px solid #e1e1e1;
+                text-align:center;
+
+                &-list{
+                    padding:18px 0;
 
                     &-item{
-                        display:block;
-                        margin:0;
-                        border-bottom:1px solid #e1e1e1;
-                        background:#fff;
-                        padding:18px 0;
-                    }
+                        display:inline-block;
+                        margin:0 2.5% 0 2.5%;
 
-                    &-link{
-                        height:auto;
-                        line-height:inherit;
-                    }
-                }
-
-                &-depth2{
-                    display:none;
-                }
-
-                .lang{
-                    display:block;
-                    height:50px;
-                    background:#f5f5f5;
-                    border-bottom:1px solid #e1e1e1;
-                    text-align:center;
-
-                    &-list{
-                        padding:18px 0;
-
-                        &-item{
-                            display:inline-block;
-                            margin:0 2.5% 0 2.5%;
-
-                            &:nth-child(1){
-                                .lang-list-link{
-                                    color:#3e3a3b;
-                                }
-                            }
-                        }
-
-                        &-link{
-                            font-size:12px;
-                            color:#a8a9ad;
-                            font-weight:500;
-
-                            &:hover{
+                        &:nth-child(1){
+                            .lang-list-link{
                                 color:#3e3a3b;
                             }
                         }
                     }
-                }
+                    &-link{
+                        font-size:12px;
+                        color:#a8a9ad;
+                        font-weight:500;
 
+                        &:hover{
+                            color:#3e3a3b;
+                        }
+                    }
+                }
             }
-        }
+            }
 
         .lang{
             display:none;
