--- a/css_src/_hkcosm_2_1.scss
+++ b/css_src/_hkcosm_2_1.scss
@@ -11,14 +11,19 @@
 
         &-title{
             font-size:42px;
-            font-weight: 300;
+            font-weight:300;
+            line-height:1.3;
+            letter-spacing:-1px;
+            padding:0 60px;
         }
 
         &-text{
             font-size:20px;
             font-weight: 300;
+            line-height:1.6;
             letter-spacing:-1px;
-            margin-top:29px;
+            margin-top:20px;
+            padding:0 60px;
         }
     }
 
@@ -28,44 +33,46 @@
     background:url("../images/hkcosm_2_1/subvisual_1.jpg")no-repeat center;
     background-size:cover;
 }
+
 .contents{
     padding:120px 0;
     text-align: center;
 
+    &-wrap{
+        padding:0 20px;
+    }
+
     &-title{
         font-size:30px;
-        font-weight:300;
         line-height:1.3;
         margin-bottom:15px;
-        letter-spacing:-1px;
+        letter-spacing:-2px;
+        color:#2b2b2b;
+        font-weight:300;
     }
 
     &-text{
         color:#747474;
         font-size:16px;
         font-weight:300;
+        font-family:"Noto Sans KR", sans-serif;
         line-height:1.6;
         letter-spacing:-1px;
+
     }
 }
 
 .overview{
 
-    &-wrap{
-        width:1170px;
-        margin:0 auto;
-    }
-
     &-img{
         height:585px;
-        background:url("../images/hkcosm_2_1/hkcosm_2_1_bgwrap.jpg")no-repeat center fixed;
+        background:url("../images/hkcosm_2_1/hkcosm_2_1_bgwrap.jpg")no-repeat center top fixed;
         background-size:cover;
     }
 
     &-contents{
-        height:530px;
         text-align:center;
-        padding:120px 0;
+        padding:140px 0;
         box-sizing:border-box;
 
         &-title{
@@ -102,9 +109,11 @@
                     top:0;
                     right:0;
                 }
+
                 &:nth-child(1){
                     margin-left:97px;
                 }
+
                 &:last-child{
                     &:after{
                         display:none;
@@ -113,17 +122,21 @@
             }
 
             &-text{
-                margin-top:27px;
-                letter-spacing:-1.3px;
+                margin-top:20px;
 
                 &-title{
                     color:#1a1a1a;
-                    margin-bottom:10px;
+                    font-weight:400;
+                    font-family:"Noto Sans KR", sans-serif;
+                    margin-bottom:5px;
+                    letter-spacing:-1px;
                 }
                 &-con{
                     color:#747474;
                     font-weight:300;
+                    font-family:"Noto Sans KR", sans-serif;
                     line-height:1.6;
+                    letter-spacing:-1px;
                 }
 
             }
@@ -137,6 +150,10 @@
     text-align:center;
     color:#fff;
 
+    &-wrap{
+        padding:0 20px;
+    }
+
     &-title{
         font-size: 22px;
         font-weight:500;
@@ -145,13 +162,14 @@
 
     &-video{
         width:100%;
-        height:636px;
+        padding-bottom:56.25%;
         position: relative;
-        padding:0 20px;
-        box-sizing: border-box;
         z-index:10;
 
         & iframe{
+            position:absolute;
+            top:0;
+            left:0;
             width:100%;
             height:100%;
         }
@@ -162,8 +180,6 @@
             left:0;
             width:100%;
             height:100%;
-            padding:0 20px;
-            box-sizing: border-box;
         }
 
         & img{
@@ -175,6 +191,7 @@
     &-heading{
         font-size:30px;
         font-weight:200;
+        font-family:"Noto Sans KR", sans-serif;
         line-height:1.3;
         letter-spacing:-2px;
         margin-top:35px;
@@ -183,9 +200,10 @@
     &-text{
         font-size:16px;
         font-weight:200;
+        font-family:"Noto Sans KR", sans-serif;
         line-height:1.6;
         letter-spacing:-1px;
-        margin-top:38px;
+        margin-top:26px;
     }
 }
 
@@ -267,3 +285,139 @@
         }
     }
 }
+
+@media screen and (max-width:991px){
+
+    .contents{
+
+        &-title{
+
+            .br{
+                display:none;
+            }
+        }
+
+        &-text{
+
+            .br-con{
+                display:none;
+            }
+        }
+    }
+
+    .overview-contents-list-item{
+        width:50%;
+        margin-bottom:40px;
+
+        &:nth-child(1){
+            margin-left:0;
+        }
+
+        &:nth-child(5){
+            margin-right:0;
+            margin-bottom:0;
+        }
+        &:nth-child(2n){
+
+            &:after{
+                display:none;
+            }
+        }
+    }
+
+    .prCenter{
+
+        &-heading{
+            .br{
+                display:none;
+            }
+        }
+
+        &-text{
+            .br-con{
+                display:none;
+            }
+        }
+    }
+
+    .location{
+
+        &-list-item{
+            width:100%;
+
+            &:first-child{
+                margin-bottom:45px;
+            }
+        }
+    }
+
+
+}
+
+@media screen and (max-width:767px){
+
+    .subVisual-wrap{
+
+        &-title{
+            font-size:31.5px;
+        }
+
+        &-text{
+            font-size:15px;
+        }
+    }
+
+    .contents{
+        padding:90px 0;
+
+        &-title{
+            font-size:22.5px;
+        }
+    }
+
+    .overview{
+
+        &-img{
+            height:438.75px;
+        }
+
+        &-contents{
+            padding:105px 0;
+
+            &-list-item{
+                width:100%;
+
+                &:after{
+                    display:none;
+                }
+            }
+        }
+    }
+
+    .prCenter{
+        padding:86px 0;
+
+        &-heading{
+            font-size:22.5px;
+        }
+    }
+
+    .location{
+        padding:90px 0;
+    }
+}
+
+@media screen and (max-width:640px) {
+
+    .subVisual{
+        height:280px;
+    }
+
+    .overview{
+
+        &-img{
+            background:url('../images/hkcosm_2_1/hkcosm_2_1_bgwrap2.jpg')no-repeat center top fixed;
+        }
+    }
+}
+
