--- a/css_src/_hkcosm_3_1.scss
+++ b/css_src/_hkcosm_3_1.scss
@@ -5,8 +5,13 @@
 
 .contents{
 
+    .bold{
+        font-weight:500;
+        font-size:30px;
+    }
+
     &-img{
-        margin-top:50px;
+        margin-top:40px;
 
         &-list{
 
@@ -23,6 +28,14 @@
                 padding:0 20px;
                 box-sizing: border-box;
                 font-size:0;
+
+                &.item1{
+                    text-align:right;
+                }
+
+                &.item3{
+                    text-align:left;
+                }
             }
 
             .line{
@@ -38,22 +51,32 @@
     &-bg{
         width:100%;
         height:623px;
-        background:url('../images/hkcosm_3_1/consulting_bg.jpg')no-repeat center fixed;
+        background:url('../images/hkcosm_3_1/consulting_bg.jpg')no-repeat center top fixed;
         background-size:cover;
         display:table;
+    }
 
-        &-title{
-            display:table-cell;
-            vertical-align:middle;
-            text-align:center;
-        }
+
+
+}
+
+.bgBox{
+
+    &-title{
+        display:table-cell;
+        vertical-align:middle;
+        text-align:center;
     }
 
     &-wrap{
+        width:100%;
         height:344px;
-        padding:120px 0;
-        font-family:"Noto Sans KR", sans-serif;
-        box-sizing: border-box;
+        display:table;
+
+        &-con{
+            display: table-cell;
+            vertical-align:middle;
+        }
 
         &:after{
             display:block;
@@ -63,25 +86,29 @@
 
         &-title{
             width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
             color:#2b2b2b;
+            letter-spacing:-1px;
             font-weight:200;
             font-size:30px;
+            font-family:"Noto Sans KR", sans-serif;
             line-height:1.3;
             float:left;
+            padding:0 20px;
+            box-sizing: border-box;
+
         }
 
         &-text{
             width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
             color:#747474;
             letter-spacing:-1px;
             font-size:16px;
+            font-family:"Noto Sans KR", sans-serif;
             line-height:1.6;
             font-weight:200;
             float:left;
+            padding:0 20px;
+            box-sizing: border-box;
         }
     }
 
@@ -96,48 +123,8 @@
         background-size:cover;
         display:table;
 
-        &-title{
-            display:table-cell;
-            vertical-align:middle;
-            text-align:center;
-        }
     }
 
-    &-wrap{
-        height:344px;
-        padding:120px 0;
-        font-family:"Noto Sans KR", sans-serif;
-        box-sizing: border-box;
-
-        &:after{
-            display:block;
-            content:"";
-            clear:both;
-        }
-
-        &-title{
-            width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
-            color:#2b2b2b;
-            font-weight:200;
-            font-size:30px;
-            line-height:1.3;
-            float:left;
-        }
-
-        &-text{
-            width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
-            color:#747474;
-            letter-spacing:-1px;
-            font-size:16px;
-            line-height:1.6;
-            font-weight:200;
-            float:left;
-        }
-    }
 
 }
 
@@ -150,47 +137,94 @@
         background-size:cover;
         display:table;
 
-        &-title{
-            display:table-cell;
-            vertical-align:middle;
-            text-align:center;
-        }
     }
 
-    &-wrap{
-        height:344px;
-        padding:120px 0;
-        font-family:"Noto Sans KR", sans-serif;
-        box-sizing: border-box;
 
-        &:after{
-            display:block;
-            content:"";
-            clear:both;
+
+}
+
+@media screen and (max-width:991px){
+
+    .contents{
+
+        &-img{
+
+            &-list-item{
+                width:100%;
+                margin-bottom:40px;
+
+
+                &.item1{
+                    text-align:center;
+                }
+                &.item3{
+                    text-align:center;
+                    margin-bottom:0;
+                }
+            }
+
+            .line{
+                border-left:0;
+                border-right:0;
+            }
         }
+
+    }
+
+    .bgBox-wrap{
 
         &-title{
-            width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
-            color:#2b2b2b;
-            font-weight:200;
-            font-size:30px;
-            line-height:1.3;
-            float:left;
-        }
+            width:100%;
 
+            .br{
+                display:none;
+            }
+        }
         &-text{
-            width:50%;
-            padding:0 20px;
-            box-sizing:border-box;
-            color:#747474;
-            letter-spacing:-1px;
-            font-size:16px;
-            line-height:1.6;
-            font-weight:200;
-            float:left;
+            width:100%;
+            margin-top:50px;
+
+            .br-con{
+                display:none;
+            }
         }
     }
 
+}
+
+@media screen and (max-width:767px){
+
+    .consulting-bg{
+        height:492px;
+    }
+    .branding-bg{
+        height:492px;
+    }
+    .design-bg{
+        height:492px;
+    }
+
+    .bgBox-wrap{
+
+        &-title{
+            font-size:22.5px;
+        }
+        &-text{
+            font-size:16px;
+        }
+    }
+
+}
+
+@media screen and (max-width:640px){
+
+    .consulting-bg{
+        background:url("../images/hkcosm_3_1/consulting_bg2.jpg")no-repeat center top fixed;
+    }
+    .branding-bg{
+        background:url("../images/hkcosm_3_1/branding_bg2.jpg")no-repeat center top fixed;
+    }
+    .design-bg{
+        background:url("../images/hkcosm_3_1/design_bg2.jpg")no-repeat center top fixed;
+    }
 }
