--- a/css_src/_hkcosm_4_1.scss
+++ b/css_src/_hkcosm_4_1.scss
@@ -2,3 +2,74 @@
     background:url("../images/hkcosm_4_1/subvisual_3.jpg")no-repeat center;
     background-size:cover;
 }
+
+.beauty-slide{
+    padding:120px 0;
+    background:#f5f5f5;
+
+    .bx-wrapper{
+        border:0;
+        background:0;
+        box-shadow:none;
+    }
+
+    &-title{
+        font-size:20px;
+        letter-spacing:-0.2;
+        font-weight:500;
+        text-align:center;
+    }
+
+    &-wrap{
+        margin-top:55px;
+
+        &-list{
+
+            margin-left:30%;
+            margin-right:30%;
+
+            &-item{
+                width:800px;
+                height:529px;
+                font-size:0;
+                position:relative;
+            }
+
+            &-img{
+                height:100%;
+
+                & img{
+                    width:100%;
+                    height:100%;
+                }
+            }
+
+            &-text{
+                position:absolute;
+                top:50%;
+                left:0;
+                width:100%;
+                margin-top:-48px;
+                letter-spacing:-0.7px;
+                text-align: center;
+
+
+                &-heading{
+                    font-size:30px;
+                    color:#fff;
+                    font-weight:200;
+                    padding:0 30px;
+                }
+
+                &-con{
+                    font-size:16px;
+                    color:#fff;
+                    font-weight:300;
+                    line-height:1.6;
+                    padding:0 30px;
+                    margin-top:15px;
+                }
+            }
+        }
+    }
+}
